diesel_compile_tests/tests/fail/derive/bad_not_sized.stderr
error: expected `,`
 --> $DIR/bad_not_sized.rs:6:20
  |
6 | #[diesel(not_sized = true)]
  |                    ^
